# elegy

./: .deepsource.toml  .dockerignore  .gitignore  .gitpod.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile_CUDA  LICENSE  README.md  gitpod.Dockerfile  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  test.py
.github/workflows/: ci_test.yml  create-release.yml  publish-package.yml  pullrequestchecks.yml  run-tests.yml
advanced-usage/: index.html
api/GeneralizedModule/: index.html
api/GeneralizedOptimizer/: index.html
api/GradStep/: index.html
api/HaikuModule/: index.html
api/Loss/: index.html
api/Losses/: index.html
api/Metric/: index.html
api/Metrics/: index.html
api/Model/: index.html
api/ModelBase/: index.html
api/Module/: index.html
api/Optimizer/: index.html
api/OutputStates/: index.html
api/Overview/: index.html
api/PRNGSequence/: index.html
api/PredStep/: index.html
api/RNG/: index.html
api/RNGSeq/: index.html
api/States/: index.html
api/TestStep/: index.html
api/TrainStep/: index.html
api/Uninitialized/: index.html
api/add_loss/: index.html
api/add_metric/: index.html
api/add_summary/: index.html
api/flax_summarize/: index.html
api/flax_summary/: index.html
api/get_dynamic_context/: index.html
api/get_losses/: index.html
api/get_metrics/: index.html
api/get_parameter/: index.html
api/get_rng/: index.html
api/get_state/: index.html
api/get_static_context/: index.html
api/get_summaries/: index.html
api/hooks_context/: index.html
api/inject_dependencies/: index.html
api/is_training/: index.html
api/jit/: index.html
api/name_context/: index.html
api/next_rng_key/: index.html
api/set_context/: index.html
api/set_rng/: index.html
api/set_state/: index.html
api/set_training/: index.html
api/to_module/: index.html
api/training_context/: index.html
api/value_and_grad/: index.html
basic-api/modules-losses-metrics/: index.html
containers/: Dockerfile
containers/GPU/: Dockerfile
contributing/: index.html
docs/: Untitled.ipynb  advanced-usage.md  elegy-module.md  getting-started-basic-api.ipynb  getting-started-high-level-api.ipynb  getting-started-low-level-api.ipynb  getting-started.ipynb  index.md  mnist.ipynb
docs/api/: DependencyUnavailable.md  GeneralizedModule.md  GeneralizedOptimizer.md  GradStep.md  HaikuModule.md  Loss.md  Losses.md  Metric.md  Metrics.md  Mode.md  Model.md  ModelBase.md  Module.md  Optimizer.md  OutputStates.md  Overview.md  PRNGSequence.md  PredStep.md  RNG.md  RNGSeq.md  States.md  TestStep.md  TrainStep.md  Uninitialized.md  add_loss.md  add_metric.md  add_summary.md  context.md  flax_summarize.md  flax_summary.md  get_dynamic_context.md  get_losses.md  get_metrics.md  get_parameter.md  get_rng.md  get_state.md  get_static_context.md  get_summaries.md  hooks_context.md  inject_dependencies.md  (+11 more)
elegy/: __init__.py  data_adapter.py  data_adapter_test.py  dependency_injection.py  dependency_injection_test.py  distributed_strategies.py  frozen_dict.py  hooks.py  hooks_test.py  initializers.py  model copy.py  model.py  model_test.py  module.py  module_slicing.py  module_slicing_test.py  module_test.py  optax.py  optimizer.py  optimizer_test.py  pytree.py  random.py  slicing.py  slicing_test.py  strategies.py  testing_utils.py  transformers.py  types.py  utils.py  utils_test.py
elegy-module/: index.html
examples/: CIFAR10_95%accuracy.ipynb  README.md  basic-demo.py  elegy_mnist.py  elegy_mnist_autoencoder.py  elegy_mnist_conv.py  elegy_mnist_conv_pmap.py  elegy_mnist_dataloader.py  elegy_mnist_tf_data.py  elegy_mnist_torch_dataloader.py  elegy_mnist_vae.py  flax_linear_classifier.py  flax_logistic_regression.py  flax_mnist_vae.py  flax_mnist_vae_test_step.py  haiku_logistic_regression.py  jax_linear_classifier_functional.py  jax_linear_classifier_test_step.py  jax_linear_classifier_train_step.py  jax_logistic_regression_functional.py  jax_logistic_regression_test_step.py  jax_logistic_regression_train_step.py  logistic_regression.py  logistic_regression_functional.py  logistic_regression_minimalist.py  logistic_regression_minimalist_test_step.py  logistic_regression_pure.py  logistic_regression_test_step.py  logistic_regression_train_step.py  mnist-demo.py  mnist-original.py  mnist.py  mnist_autoencoder.py  mnist_clean.py  mnist_conv.py  mnist_dataloader.py  mnist_fit.py  mnist_fit_keras.py  mnist_test.py  mnist_tf_data.py  (+6 more)
getting-started/: index.html
getting-started-high-level-api/: index.html
getting-started-low-level-api/: index.html
mnist/: index.html
model/: model.pkl  optimizer_parameters.pkl  optimizer_state.pkl
na/: index.html
scripts/: action-install-deps.sh  deploy-docs.sh  get-coverage.sh  install-remote.sh  run-docs.sh  run-tests-action.sh  test-examples.sh  test-gpu.sh  test-version.sh  update_docs.py  update_version.py
search/: search_index.json
tests/: test_elegy.py  test_pytree.py  utils_test.py
tests_old/: pytree.py
tmp/: module.pkl  test.py
(+617 files in other folders)
