[tool.poetry]
name = "elegy"
description = "Elegy is a Neural Networks framework based on Jax and Haiku."
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>",
           "Carlos Alvarez <candres.alv@gmail.com>",
           "David Cardozo <davidcardozo@berkeley.edu>",
           "Sebastian Arango"]
version = "0.8.1"
license = "APACHE"
readme = "README.md"
repository = "https://github.com/poets-ai/elegy"
homepage = "https://poets-ai.github.io/elegy"

[[tool.poetry.source]]
name = "torch"
url = "https://eternalphane.github.io/pytorch-pypi/"
secondary = true

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
cloudpickle = "^1.5.0"
tensorboardx = "^2.1"
treex = "^0.6.3"
# treex = {path = "../treex", develop = true}

[tool.poetry.dev-dependencies]
jax = "^0.2.24"
jaxlib = "^0.1.73"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
dm-haiku = "^0.0.5"
mkdocs = "^1.1.2"
mkdocs-material = "^6.2.7"
mkdocstrings = "^0.14.0"
black = {version = "^20.8b1", allow-prereleases = true}
typer = "^0.3.0"
mkdocs-jupyter = { version = "^0.15.1", python = ">=3.7" }
matplotlib = "^3.3.0"
debugpy = "^1.0.0-beta.12"
jupyter = { version = "^1.0.0", python = ">=3.7" }
jupyterlab = { version = "^3.0.6", python = ">=3.7" }
ipython = { version = "^7.20.0", python = ">=3.7" }
flax = "^0.3.6"
torch = "1.9.1+cpu"
einops = "^0.3.0"
sh = "^1.14.1"
pre-commit = "^2.15.0"
datasets = "^1.14.0"
tf-nightly-cpu = "2.8.0.dev20211103"
livereload = "^2.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
